--- a/src/locales/it/document-serial-type-management.json
+++ b/src/locales/it/document-serial-type-management.json
@@ -1,8 +1,8 @@
 {
-  "menu": "Gestione Tipi di Serie Documenti",
+  "menu": "Gestione tipi di documento",
   "title": "Gestione Tipi di Serie Documenti",
-  "description": "Gestisci e modifica i tipi di serie documenti",
-  "addButton": "Aggiungi Nuovo Tipo di Serie Documenti",
+  "description": "Gestisci e modifica i tipi di documento",
+  "addButton": "Aggiungi nuovo tipo di documento",
   "deleteTitle": "Elimina Tipo di Serie Documenti",
   "deleteMessage": "Sei sicuro di voler eliminare questo tipo di serie documenti?",
   "deleteSuccess": "Tipo di serie documenti eliminato con successo",
@@ -15,11 +15,18 @@
     "searchPlaceholder": "Cerca tipi di serie documenti...",
     "showing": "Visualizzazione {{from}}-{{to}} / {{total}}",
     "page": "Pagina {{current}} / {{total}}",
-    "rowsPerPage": "Righe per pagina"
+    "rowsPerPage": "Righe per pagina",
+    "id": "ID",
+    "ruleType": "Tipo di regola",
+    "customerType": "Tipo cliente",
+    "salesRep": "Rappresentante vendite",
+    "serialPrefix": "Prefisso serie",
+    "serialLength": "Lunghezza serie",
+    "createdDate": "Data di creazione"
   },
   "form": {
-    "addTitle": "Aggiungi Nuovo Tipo di Serie Documenti",
-    "editTitle": "Modifica Tipo di Serie Documenti",
+    "addTitle": "Aggiungi nuovo tipo di documento",
+    "editTitle": "Modifica tipo di documento",
     "name": "Nome",
     "code": "Codice",
     "description": "Descrizione",
@@ -30,6 +37,47 @@
     "save": "Salva",
     "required": "Obbligatorio",
     "successAdd": "Tipo di serie documenti aggiunto con successo",
-    "successUpdate": "Tipo di serie documenti aggiornato con successo"
-  }
+    "successUpdate": "Tipo di serie documenti aggiornato con successo",
+    "addDescription": "Inserisci le informazioni del nuovo tipo di documento",
+    "editDescription": "Modifica le informazioni del tipo di documento",
+    "ruleType": "Tipo di regola",
+    "ruleType.required": "È necessario selezionare il tipo di regola",
+    "selectRuleType": "Seleziona tipo di regola",
+    "customerType": "Tipo cliente",
+    "selectCustomerType": "Seleziona tipo cliente (opzionale)",
+    "noCustomerTypeSelected": "Nessun tipo cliente selezionato",
+    "salesRep": "Rappresentante vendite",
+    "selectSalesRep": "Seleziona rappresentante vendite (opzionale)",
+    "noSalesRepSelected": "Nessun rappresentante vendite selezionato",
+    "serialPrefix": "Prefisso serie",
+    "serialPrefix.required": "Il prefisso serie è obbligatorio",
+    "serialPrefix.maxLength": "Il prefisso serie può avere al massimo 50 caratteri",
+    "serialPrefixPlaceholder": "Inserisci il prefisso serie",
+    "serialLength": "Lunghezza serie",
+    "serialLength.min": "La lunghezza della serie deve essere almeno 1",
+    "serialLength.max": "La lunghezza della serie può essere al massimo 100",
+    "serialLengthPlaceholder": "Inserisci la lunghezza della serie",
+    "serialStart": "Inizio serie",
+    "serialStart.min": "L'inizio della serie deve essere almeno 0",
+    "serialStartPlaceholder": "Inserisci il valore iniziale della serie",
+    "serialCurrent": "Serie corrente",
+    "serialCurrent.min": "La serie corrente deve essere almeno 0",
+    "serialCurrentPlaceholder": "Inserisci il valore corrente della serie",
+    "serialIncrement": "Incremento serie",
+    "serialIncrement.min": "L'incremento della serie deve essere almeno 1",
+    "serialIncrementPlaceholder": "Inserisci il valore di incremento della serie"
+  },
+  "search": "Cerca...",
+  "refresh": "Aggiorna",
+  "loading": "Caricamento...",
+  "noData": "Nessun dato",
+  "actions": "Azioni",
+  "cancel": "Annulla",
+  "save": "Salva",
+  "saving": "Salvataggio...",
+  "delete": "Elimina",
+  "deleting": "Eliminazione...",
+  "deleteConfirmTitle": "Conferma eliminazione",
+  "deleteConfirmDescription": "Sei sicuro di voler eliminare questo record? Questa azione non può essere annullata.",
+  "totalRecords": "Totale {{count}} record"
 }
