--- a/src/locales/it/pricing-rule.json
+++ b/src/locales/it/pricing-rule.json
@@ -31,5 +31,97 @@
     "updateSuccess": "Regola aggiornata con successo",
     "deleteSuccess": "Regola eliminata con successo",
     "confirmDelete": "Sei sicuro di voler eliminare questa regola?"
+  },
+  "loading": "Caricamento...",
+  "loadingDescription": "Caricamento delle informazioni sulle regole di prezzo",
+  "list": {
+    "title": "Regole di prezzo",
+    "description": "Gestisci le regole di prezzo e le loro righe",
+    "add": "Aggiungi regola",
+    "empty": "Nessuna regola di prezzo"
+  },
+  "salesmen": {
+    "title": "Venditori",
+    "addSuccess": "Venditore aggiunto",
+    "addSuccessMessage": "Il venditore è stato aggiunto correttamente",
+    "addError": "Errore di aggiunta",
+    "addErrorMessage": "Impossibile aggiungere il venditore",
+    "deleteSuccess": "Venditore eliminato",
+    "deleteSuccessMessage": "Il venditore è stato eliminato correttamente",
+    "deleteError": "Errore di eliminazione",
+    "deleteErrorMessage": "Impossibile eliminare il venditore"
+  },
+  "header": {
+    "ruleType": "Tipo di regola",
+    "ruleCode": "Codice regola",
+    "ruleName": "Nome regola",
+    "validFrom": "Valido dal",
+    "validTo": "Valido fino al",
+    "customer": "Cliente",
+    "erpCustomerCode": "Codice cliente ERP",
+    "branchCode": "Codice filiale",
+    "currencyCode": "Valuta",
+    "priceIncludesVat": "IVA inclusa",
+    "isActive": "Attivo",
+    "ruleTypePlaceholder": "Seleziona tipo di regola",
+    "validToMustBeAfterValidFrom": "La data di fine deve essere successiva alla data di inizio",
+    "ruleCodePlaceholder": "Inserisci il codice regola",
+    "ruleNamePlaceholder": "Inserisci il nome regola",
+    "customerPlaceholder": "Inserisci cliente",
+    "selectCustomer": "Seleziona cliente",
+    "branchCodePlaceholder": "Inserisci codice filiale",
+    "selectCurrency": "Seleziona valuta"
+  },
+  "ruleType": {
+    "demand": "Richiesta",
+    "quotation": "Preventivo",
+    "order": "Ordine",
+    "unknown": "Sconosciuto"
+  },
+  "lines": {
+    "title": "Righe",
+    "add": "Aggiungi riga",
+    "empty": "Nessuna riga",
+    "stokCode": "Codice stock",
+    "minQuantity": "Quantità min",
+    "maxQuantity": "Quantità max",
+    "fixedUnitPrice": "Prezzo unitario fisso",
+    "discount1": "Sconto 1",
+    "discount2": "Sconto 2",
+    "discount3": "Sconto 3",
+    "discount1Rate": "Aliquota sconto 1",
+    "discount1Amount": "Importo sconto 1",
+    "discount2Rate": "Aliquota sconto 2",
+    "discount2Amount": "Importo sconto 2",
+    "discount3Rate": "Aliquota sconto 3",
+    "discount3Amount": "Importo sconto 3",
+    "minQuantityMin": "La quantità min deve essere maggiore di 0",
+    "minQuantityMax": "La quantità min deve essere minore della quantità max",
+    "maxQuantityMin": "La quantità max deve essere maggiore di 0",
+    "maxQuantityMustBeGreaterThanMin": "La quantità max deve essere maggiore della quantità min",
+    "fixedUnitPriceMin": "Il prezzo unitario fisso deve essere maggiore di 0",
+    "required": "Obbligatorio",
+    "selectStock": "Seleziona stock",
+    "selectProduct": "Seleziona prodotto",
+    "stokCodePlaceholder": "Inserisci codice stock",
+    "stokCodeRequired": "Il codice stock è obbligatorio",
+    "minQuantityRequired": "La quantità min è obbligatoria",
+    "maxQuantityRequired": "La quantità max è obbligatoria",
+    "fixedUnitPriceRequired": "Il prezzo unitario fisso è obbligatorio",
+    "currencyCodeRequired": "La valuta è obbligatoria",
+    "selectCurrency": "Seleziona valuta",
+    "minQuantityInvalid": "Quantità minima non valida",
+    "minQuantityInvalidMessage": "Inserisci una quantità minima valida"
+  },
+  "card": {
+    "customer": "Cliente",
+    "lines": "Righe",
+    "salesmen": "Venditori",
+    "vatIncluded": "IVA inclusa"
+  },
+  "status": {
+    "active": "Attivo",
+    "inactive": "Inattivo",
+    "expired": "Scaduto"
   }
 }
