--- a/src/locales/it/quotation-line-management.json
+++ b/src/locales/it/quotation-line-management.json
@@ -1,6 +1,6 @@
 {
   "title": "Gestione Righe Preventivo",
-  "description": "Gestisci e modifica le righe del preventivo",
+  "description": "Descrizione",
   "create": "Nuova Riga Preventivo",
   "createDescription": "Inserisci informazioni nuova riga preventivo",
   "edit": "Modifica Riga Preventivo",
@@ -23,7 +23,6 @@
   "vatAmount": "Importo IVA",
   "lineTotal": "Totale Riga (Escl. IVA)",
   "lineGrandTotal": "Totale Riga (Incl. IVA)",
-  "description": "Descrizione",
   "createdDate": "Data Creazione",
   "updatedDate": "Data Aggiornamento",
   "actions": "Azioni",
@@ -97,7 +96,7 @@
   "maxLineTotal": "Totale Riga Max",
   "minLineGrandTotal": "Totale Generale Riga Min",
   "maxLineGrandTotal": "Totale Generale Riga Max",
-  "percentage": "%",
+  "percentage": "Percentuale",
   "getByQuotation": "Ottieni per Preventivo",
   "allLines": "Tutte le Righe",
   "linesForQuotation": "Righe Preventivo",
