--- a/src/locales/it/stock.json
+++ b/src/locales/it/stock.json
@@ -27,5 +27,105 @@
     "out": "Uscita",
     "transfer": "Trasferimento",
     "adjustment": "Rettifica"
+  },
+  "list": {
+    "title": "Prodotti",
+    "description": "Gestisci i prodotti sincronizzati con l'ERP",
+    "syncedFromErp": "Sincronizzato da ERP",
+    "search": "Cerca",
+    "id": "ID",
+    "erpStockCode": "Codice stock ERP",
+    "stockName": "Nome prodotto",
+    "unit": "Unità",
+    "actions": "Azioni",
+    "viewDetail": "Vedi dettaglio",
+    "showing": "Mostrando",
+    "page": "Pagina",
+    "previous": "Precedente",
+    "next": "Successivo"
+  },
+  "detail": {
+    "title": "Dettaglio prodotto",
+    "basicInfo": "Informazioni di base",
+    "basicInfoReadonly": "Informazioni di base (sola lettura)",
+    "images": "Immagini",
+    "relations": "Relazioni",
+    "save": "Salva",
+    "cancel": "Annulla",
+    "erpStockCode": "Codice stock ERP",
+    "stockName": "Nome prodotto",
+    "unit": "Unità",
+    "htmlDescription": "Descrizione HTML",
+    "htmlDescriptionPlaceholder": "Inserisci descrizione HTML",
+    "htmlDescription.required": "La descrizione HTML è obbligatoria",
+    "technicalSpecs": "Specifiche tecniche",
+    "technicalSpecsPlaceholder": "Inserisci specifiche tecniche",
+    "notFound": "Prodotto non trovato",
+    "notFoundDesc": "Il prodotto richiesto non esiste",
+    "backToStockList": "Torna alla lista",
+    "mainInfo": "Informazioni principali",
+    "ureticiKodu": "Codice produttore",
+    "groupInfo": "Informazioni gruppo",
+    "branchCode": "Codice filiale",
+    "grup": "Gruppo",
+    "specialCodes": "Codici speciali",
+    "kod1": "Codice 1",
+    "kod2": "Codice 2",
+    "kod3": "Codice 3",
+    "kod4": "Codice 4",
+    "kod5": "Codice 5",
+    "created": "Creato",
+    "updated": "Aggiornato",
+    "copied": "Copiato",
+    "copy": "Copia"
+  },
+  "images": {
+    "upload": "Carica",
+    "uploadHint": "Trascina e rilascia le immagini o fai clic per selezionare",
+    "uploadButton": "Seleziona file",
+    "selectedFiles": "File selezionati",
+    "altText": "Testo alternativo",
+    "primary": "Principale",
+    "setPrimary": "Imposta come principale",
+    "delete": "Elimina",
+    "noImages": "Nessuna immagine",
+    "deleteConfirm": "Elimina immagine",
+    "deleteConfirmMessage": "Sei sicuro di voler eliminare questa immagine?"
+  },
+  "relations": {
+    "add": "Aggiungi relazione",
+    "relatedStock": "Prodotto correlato",
+    "relatedStock.required": "È obbligatorio selezionare il prodotto correlato",
+    "quantity": "Quantità",
+    "quantity.positive": "La quantità deve essere un numero positivo",
+    "description": "Descrizione",
+    "descriptionPlaceholder": "Inserisci una descrizione",
+    "isMandatory": "Obbligatorio",
+    "mandatory": "Obbligatorio",
+    "optional": "Opzionale",
+    "delete": "Elimina",
+    "cancel": "Annulla",
+    "deleting": "Eliminazione...",
+    "actions": "Azioni",
+    "noRelations": "Nessuna relazione",
+    "noRelationsDesc": "Nessun prodotto correlato",
+    "selectStock": "Seleziona prodotto",
+    "search": "Cerca",
+    "deleteConfirm": "Elimina relazione",
+    "deleteConfirmMessage": "Sei sicuro di voler eliminare questa relazione?",
+    "confirmDelete": "Conferma eliminazione",
+    "stockCode": "Codice stock",
+    "stockName": "Nome prodotto",
+    "noStockFound": "Nessun prodotto trovato",
+    "saving": "Salvataggio..."
+  },
+  "messages": {
+    "detailCreateSuccess": "Dettaglio creato correttamente",
+    "detailUpdateSuccess": "Dettaglio aggiornato correttamente",
+    "deleteSuccess": "Eliminato correttamente",
+    "uploadSuccess": "Immagine caricata correttamente",
+    "setPrimarySuccess": "Immagine principale aggiornata",
+    "relationCreateSuccess": "Relazione creata correttamente",
+    "error": "Si è verificato un errore"
   }
 }
