--- a/src/locales/it/user-detail-management.json
+++ b/src/locales/it/user-detail-management.json
@@ -22,5 +22,46 @@
   "messages": {
     "successUpdate": "Dettagli utente aggiornati con successo",
     "errorUpdate": "Errore durante l'aggiornamento dei dettagli utente"
-  }
+  },
+  "profilePicture": "Foto profilo",
+  "height": "Altezza (cm)",
+  "weight": "Peso (kg)",
+  "gender": "Genere",
+  "enterHeight": "Inserisci altezza (cm)",
+  "enterWeight": "Inserisci peso (kg)",
+  "enterDescription": "Inserisci descrizione",
+  "selectGender": "Seleziona genere",
+  "noGenderSelected": "Non specificato",
+  "changeProfilePicture": "Cambia foto profilo",
+  "uploading": "Caricamento...",
+  "createSuccess": "Dettagli utente creati correttamente",
+  "updateSuccess": "Dettagli utente aggiornati correttamente",
+  "createError": "Errore durante la creazione dei dettagli utente",
+  "updateError": "Errore durante l'aggiornamento dei dettagli utente",
+  "uploadProfilePictureSuccess": "Foto profilo caricata correttamente",
+  "uploadProfilePictureError": "Errore durante il caricamento della foto profilo",
+  "fileSizeError": "La dimensione del file non può superare 5 MB",
+  "fileTypeError": "Sono consentiti solo file immagine",
+  "profilePictureUrlMaxLength": "L'URL della foto profilo può avere al massimo 500 caratteri",
+  "heightMin": "L'altezza deve essere maggiore o uguale a 0",
+  "heightMax": "L'altezza può essere al massimo 300 cm",
+  "weightMin": "Il peso deve essere maggiore o uguale a 0",
+  "weightMax": "Il peso può essere al massimo 500 kg",
+  "descriptionMaxLength": "La descrizione può avere al massimo 2000 caratteri",
+  "genderNotSpecified": "Non specificato",
+  "genderMale": "Maschile",
+  "genderFemale": "Femminile",
+  "genderOther": "Altro",
+  "loading": "Caricamento...",
+  "loadingDescription": "Caricamento dati, attendere...",
+  "cancel": "Annulla",
+  "saving": "Salvataggio...",
+  "save": "Salva",
+  "changePassword": "Cambia password",
+  "currentPassword": "Password attuale",
+  "enterCurrentPassword": "Inserisci la password attuale",
+  "newPassword": "Nuova password",
+  "enterNewPassword": "Inserisci la nuova password (min 6 caratteri)",
+  "changingPassword": "Modifica in corso...",
+  "changePasswordButton": "Cambia password"
 }
