--- a/src/locales/it/approval-flow-management.json
+++ b/src/locales/it/approval-flow-management.json
@@ -1,31 +1,31 @@
 {
   "approvalFlow": {
-    "menu": "Gestione Flussi di Approvazione",
-    "description": "Gestisci e organizza i flussi di approvazione",
-    "addButton": "Aggiungi Nuovo Flusso",
+    "menu": "Gestione flussi di approvazione",
+    "description": "Gestisci e modifica i flussi di approvazione",
+    "addButton": "Aggiungi nuovo flusso di approvazione",
     "table": {
       "id": "ID",
-      "documentType": "Tipo Documento",
+      "documentType": "Tipo documento",
       "description": "Descrizione",
       "isActive": "Attivo",
-      "createdDate": "Data Creazione",
-      "createdBy": "Creato Da",
+      "createdDate": "Data di creazione",
+      "createdBy": "Creato da",
       "actions": "Azioni",
-      "showing": "Visualizzazione {{from}}-{{to}} di {{total}}",
+      "showing": "Mostrando {{from}}-{{to}} / {{total}}",
       "page": "Pagina {{current}} / {{total}}"
     },
     "form": {
-      "addTitle": "Aggiungi Nuovo Flusso",
-      "editTitle": "Modifica Flusso",
-      "addDescription": "Inserisci informazioni nuovo flusso",
-      "editDescription": "Modifica informazioni flusso",
-      "documentType": "Tipo Documento",
+      "addTitle": "Aggiungi nuovo flusso di approvazione",
+      "editTitle": "Modifica flusso di approvazione",
+      "addDescription": "Inserisci le informazioni del nuovo flusso di approvazione",
+      "editDescription": "Modifica le informazioni del flusso di approvazione",
+      "documentType": "Tipo documento",
       "selectDocumentType": "Seleziona tipo documento",
-      "noDocumentTypeSelected": "Nessun tipo selezionato",
+      "noDocumentTypeSelected": "Nessun tipo documento selezionato",
       "documentTypeRequired": "La selezione del tipo documento è obbligatoria",
       "description": "Descrizione",
-      "descriptionPlaceholder": "Inserisci descrizione (opzionale)",
-      "descriptionMaxLength": "La descrizione può avere max 200 caratteri",
+      "descriptionPlaceholder": "Inserisci una descrizione (opzionale)",
+      "descriptionMaxLength": "La descrizione può avere al massimo 200 caratteri",
       "isActive": "Attivo",
       "isActiveDescription": "Stato attivo del flusso di approvazione",
       "cancel": "Annulla",
@@ -41,7 +41,7 @@
     "delete": {
       "action": "Elimina",
       "cancel": "Annulla",
-      "confirmTitle": "Elimina Flusso",
+      "confirmTitle": "Elimina flusso di approvazione",
       "confirmMessage": "Sei sicuro di voler eliminare questo flusso di approvazione?"
     },
     "documentType": {
@@ -51,19 +51,19 @@
     }
   },
   "approvalFlowStep": {
-    "title": "Passaggi del Flusso",
-    "addButton": "Aggiungi Passaggio",
+    "title": "Passaggi del flusso",
+    "addButton": "Aggiungi passaggio",
     "empty": "Nessun passaggio aggiunto",
-    "unknownRoleGroup": "Nessun Gruppo Ruoli",
-    "stepDescription": "Ordine Approvazione: {{order}}",
+    "unknownRoleGroup": "Nessun gruppo ruoli",
+    "stepDescription": "Ordine approvazione: {{order}}",
     "form": {
-      "addTitle": "Aggiungi Nuovo Passaggio",
-      "editTitle": "Modifica Passaggio",
-      "addDescription": "Aggiungi nuovo passaggio al flusso",
-      "editDescription": "Modifica informazioni passaggio",
-      "approvalRoleGroup": "Gruppo Ruoli",
+      "addTitle": "Aggiungi nuovo passaggio",
+      "editTitle": "Modifica passaggio",
+      "addDescription": "Aggiungi un nuovo passaggio al flusso",
+      "editDescription": "Modifica le informazioni del passaggio",
+      "approvalRoleGroup": "Gruppo ruoli",
       "selectRoleGroup": "Seleziona gruppo ruoli",
-      "noRoleGroupSelected": "Nessun gruppo selezionato",
+      "noRoleGroupSelected": "Nessun gruppo ruoli selezionato",
       "approvalRoleGroupIdRequired": "La selezione del gruppo ruoli è obbligatoria",
       "cancel": "Annulla",
       "save": "Salva",
