--- a/src/locales/it/payment-type-management.json
+++ b/src/locales/it/payment-type-management.json
@@ -1,8 +1,8 @@
 {
-  "title": "Gestione Tipi di Pagamento",
-  "description": "Configura e gestisci i metodi di pagamento",
-  "create": "Nuovo Tipo di Pagamento",
-  "edit": "Modifica Tipo di Pagamento",
+  "title": "Gestione tipi di pagamento",
+  "description": "Descrizione",
+  "create": "Nuovo tipo di pagamento",
+  "edit": "Modifica tipo di pagamento",
   "delete": "Elimina",
   "table": {
     "id": "ID",
@@ -10,12 +10,21 @@
     "code": "Codice",
     "description": "Descrizione",
     "isActive": "Attivo",
-    "actions": "Azioni"
+    "actions": "Azioni",
+    "createdDate": "Data di creazione",
+    "updatedDate": "Data di aggiornamento",
+    "showing": "Mostrando {{from}}-{{to}} / {{total}}",
+    "page": "Pagina {{current}} / {{total}}"
   },
   "form": {
-    "name": "Nome",
+    "name": {
+      "required": "Il nome è obbligatorio",
+      "maxLength": "Il nome può avere al massimo 100 caratteri"
+    },
     "code": "Codice",
-    "description": "Descrizione",
+    "description": {
+      "maxLength": "La descrizione può avere al massimo 500 caratteri"
+    },
     "isActive": "Attivo",
     "nameRequired": "Il nome è obbligatorio",
     "codeRequired": "Il codice è obbligatorio"
@@ -25,5 +34,31 @@
     "updateSuccess": "Tipo di pagamento aggiornato con successo",
     "deleteSuccess": "Tipo di pagamento eliminato con successo",
     "confirmDelete": "Sei sicuro di voler eliminare questo tipo di pagamento?"
-  }
+  },
+  "headerDescription": "Gestisci e modifica i tipi di pagamento",
+  "editDescription": "Modifica le informazioni del tipo di pagamento",
+  "createDescription": "Inserisci le informazioni del nuovo tipo di pagamento",
+  "deleteTitle": "Elimina tipo di pagamento",
+  "name": "Nome",
+  "namePlaceholder": "Inserisci il nome del tipo di pagamento",
+  "descriptionPlaceholder": "Inserisci una descrizione (opzionale)",
+  "createdDate": "Data di creazione",
+  "updatedDate": "Data di aggiornamento",
+  "actions": "Azioni",
+  "search": "Cerca",
+  "refresh": "Aggiorna",
+  "loading": "Caricamento...",
+  "previous": "Precedente",
+  "next": "Successivo",
+  "cancel": "Annulla",
+  "save": "Salva",
+  "saving": "Salvataggio...",
+  "noData": "Nessun dato trovato",
+  "confirmDelete": "Sei sicuro di voler eliminare questo tipo di pagamento?",
+  "createSuccess": "Tipo di pagamento creato correttamente",
+  "updateSuccess": "Tipo di pagamento aggiornato correttamente",
+  "deleteSuccess": "Tipo di pagamento eliminato correttamente",
+  "createError": "Errore durante la creazione del tipo di pagamento",
+  "updateError": "Errore durante l'aggiornamento del tipo di pagamento",
+  "deleteError": "Errore durante l'eliminazione del tipo di pagamento"
 }
