--- a/src/locales/it/product-pricing-group-by-management.json
+++ b/src/locales/it/product-pricing-group-by-management.json
@@ -13,9 +13,90 @@
     "avgFinalPrice": "Prezzo Finale Medio",
     "minFinalPrice": "Prezzo Finale Minimo",
     "maxFinalPrice": "Prezzo Finale Massimo",
-    "actions": "Azioni"
+    "actions": "Azioni",
+    "id": "ID"
   },
   "viewDetails": "Visualizza Dettagli",
   "noData": "Nessun dato trovato",
-  "loading": "Caricamento..."
+  "loading": "Caricamento...",
+  "create": "Nuovo gruppo di prezzi",
+  "edit": "Modifica gruppo di prezzi",
+  "editDescription": "Modifica le informazioni del gruppo di prezzi",
+  "createDescription": "Inserisci le informazioni del nuovo gruppo di prezzi",
+  "delete": "Elimina",
+  "deleteTitle": "Elimina gruppo di prezzi",
+  "erpGroupCode": "Codice gruppo prodotto ERP",
+  "currency": "Valuta",
+  "listPrice": "Prezzo di listino",
+  "costPrice": "Prezzo di costo",
+  "discount1": "Sconto 1",
+  "discount2": "Sconto 2",
+  "discount3": "Sconto 3",
+  "finalPrice": "Prezzo finale",
+  "profitMargin": "Margine di profitto",
+  "createdDate": "Data di creazione",
+  "updatedDate": "Data di aggiornamento",
+  "actions": "Azioni",
+  "search": "Cerca",
+  "filterByErpGroupCode": "Filtra per gruppo ERP",
+  "filterByCurrency": "Filtra per valuta",
+  "filterByPriceRange": "Filtra per intervallo di prezzo",
+  "filterByDiscountRange": "Filtra per intervallo di sconto",
+  "confirmDelete": "Sei sicuro di voler eliminare questo gruppo di prezzi?",
+  "createSuccess": "Gruppo di prezzi creato correttamente",
+  "updateSuccess": "Gruppo di prezzi aggiornato correttamente",
+  "deleteSuccess": "Gruppo di prezzi eliminato correttamente",
+  "createError": "Errore durante la creazione del gruppo di prezzi",
+  "updateError": "Errore durante l'aggiornamento del gruppo di prezzi",
+  "stats": {
+    "totalProducts": "TOTALE PRODOTTI",
+    "criticalStock": "STOCK CRITICO",
+    "categories": "CATEGORIE"
+  },
+  "deleteError": "Errore durante l'eliminazione del gruppo di prezzi",
+  "erpGroupCodeRequired": "Il codice gruppo prodotto ERP è obbligatorio",
+  "erpGroupCodeMaxLength": "Il codice gruppo prodotto ERP può avere al massimo 50 caratteri",
+  "currencyRequired": "La selezione della valuta è obbligatoria",
+  "currencyMaxLength": "La valuta può avere al massimo 50 caratteri",
+  "listPriceRequired": "Il prezzo di listino è obbligatorio",
+  "listPriceMin": "Il prezzo di listino deve essere maggiore o uguale a 0",
+  "costPriceRequired": "Il prezzo di costo è obbligatorio",
+  "costPriceMin": "Il prezzo di costo deve essere maggiore o uguale a 0",
+  "discount1Range": "Lo sconto 1 deve essere tra 0 e 100",
+  "discount2Range": "Lo sconto 2 deve essere tra 0 e 100",
+  "discount3Range": "Lo sconto 3 deve essere tra 0 e 100",
+  "enterErpGroupCode": "Inserisci il codice gruppo prodotto ERP",
+  "selectErpGroupCode": "Seleziona gruppo",
+  "selectCurrency": "Seleziona valuta",
+  "enterListPrice": "Inserisci il prezzo di listino",
+  "enterCostPrice": "Inserisci il prezzo di costo",
+  "enterDiscount1": "Inserisci sconto 1 (0-100, opzionale)",
+  "enterDiscount2": "Inserisci sconto 2 (0-100, opzionale)",
+  "enterDiscount3": "Inserisci sconto 3 (0-100, opzionale)",
+  "priceCalculation": "Calcolo prezzo",
+  "finalPriceAfterDiscounts": "Prezzo finale dopo sconti",
+  "save": "Salva",
+  "saving": "Salvataggio...",
+  "cancel": "Annulla",
+  "previous": "Precedente",
+  "next": "Successivo",
+  "close": "Chiudi",
+  "clearFilters": "Pulisci filtri",
+  "applyFilters": "Applica filtri",
+  "minPrice": "Prezzo minimo",
+  "maxPrice": "Prezzo massimo",
+  "minDiscount": "Sconto minimo",
+  "maxDiscount": "Sconto massimo",
+  "percentage": "%",
+  "try": "Lira turca",
+  "usd": "Dollaro USA",
+  "eur": "Euro",
+  "gbp": "Sterlina britannica",
+  "jpy": "Yen giapponese",
+  "calculateFinalPrice": "Calcola prezzo finale",
+  "profitMarginLabel": "Margine di profitto",
+  "highProfit": "Alto profitto",
+  "mediumProfit": "Profitto medio",
+  "lowProfit": "Basso profitto",
+  "negativeProfit": "Perdita"
 }
