--- a/src/locales/it/related-stocks-selection-dialog.json
+++ b/src/locales/it/related-stocks-selection-dialog.json
@@ -1,6 +1,6 @@
 {
-  "title": "Selezione Stock Correlati",
-  "description": "Seleziona stock correlati per il prodotto",
+  "title": "Seleziona stock correlati",
+  "description": "Seleziona gli stock correlati da aggiungere insieme allo stock principale. Gli stock obbligatori sono selezionati automaticamente.",
   "searchPlaceholder": "Cerca stock correlati...",
   "select": "Seleziona",
   "cancel": "Annulla",
@@ -11,5 +11,13 @@
     "quantity": "Quantità"
   },
   "noData": "Nessun stock correlato trovato",
-  "loading": "Caricamento..."
+  "loading": "Caricamento...",
+  "mandatoryStocks": "Stock obbligatori",
+  "optionalStocks": "Stock opzionali",
+  "unknownStock": "Stock sconosciuto",
+  "quantity": "Quantità",
+  "mandatory": "Obbligatorio",
+  "noRelatedStocks": "Nessuno stock correlato trovato",
+  "add": "Aggiungi",
+  "calculating": "Calcolo..."
 }
