--- a/src/locales/it/user-discount-limit-management.json
+++ b/src/locales/it/user-discount-limit-management.json
@@ -31,5 +31,58 @@
     "required": "Obbligatorio",
     "successAdd": "Limite di sconto aggiunto con successo",
     "successUpdate": "Limite di sconto aggiornato con successo"
-  }
+  },
+  "create": "Crea",
+  "edit": "Modifica",
+  "editDescription": "Aggiorna i limiti di sconto per venditore e gruppo prodotto.",
+  "createDescription": "Definisci i limiti di sconto per venditore e gruppo prodotto.",
+  "delete": "Elimina",
+  "salesperson": "Venditore",
+  "erpProductGroupCode": "Codice gruppo prodotto ERP",
+  "maxDiscount1": "Sconto max 1",
+  "maxDiscount2": "Sconto max 2",
+  "maxDiscount3": "Sconto max 3",
+  "salespersonName": "Nome venditore",
+  "createdDate": "Data di creazione",
+  "updatedDate": "Data di aggiornamento",
+  "actions": "Azioni",
+  "search": "Cerca",
+  "filterBySalesperson": "Filtra per venditore",
+  "filterByGroup": "Filtra per gruppo",
+  "filterByDiscount": "Filtra per sconto",
+  "noData": "Nessun dato",
+  "confirmDelete": "Sei sicuro di voler eliminare questo record?",
+  "createSuccess": "Limite di sconto creato",
+  "updateSuccess": "Limite di sconto aggiornato",
+  "createError": "Impossibile creare il limite di sconto",
+  "updateError": "Impossibile aggiornare il limite di sconto",
+  "deleteError": "Impossibile eliminare il limite di sconto",
+  "alreadyExists": "Esiste già un limite di sconto per questo venditore e gruppo",
+  "salespersonRequired": "Il venditore è obbligatorio",
+  "erpProductGroupCodeRequired": "Il codice gruppo prodotto ERP è obbligatorio",
+  "erpProductGroupCodeMaxLength": "Il codice gruppo prodotto ERP è troppo lungo",
+  "maxDiscount1Required": "Lo sconto max 1 è obbligatorio",
+  "maxDiscount1Range": "Lo sconto max 1 deve essere tra 0 e 100",
+  "maxDiscount2Range": "Lo sconto max 2 deve essere tra 0 e 100",
+  "maxDiscount3Range": "Lo sconto max 3 deve essere tra 0 e 100",
+  "selectSalesperson": "Seleziona venditore",
+  "enterErpProductGroupCode": "Inserisci il codice gruppo prodotto ERP",
+  "enterMaxDiscount1": "Inserisci lo sconto max 1",
+  "enterMaxDiscount2": "Inserisci lo sconto max 2",
+  "enterMaxDiscount3": "Inserisci lo sconto max 3",
+  "loading": "Caricamento...",
+  "previous": "Precedente",
+  "next": "Successivo",
+  "saving": "Salvataggio...",
+  "save": "Salva",
+  "cancel": "Annulla",
+  "close": "Chiudi",
+  "clearFilters": "Pulisci filtri",
+  "applyFilters": "Applica filtri",
+  "minDiscount": "Sconto min",
+  "maxDiscount": "Sconto max",
+  "percentage": "Percentuale",
+  "getBySalesperson": "Ottieni per venditore",
+  "getByGroup": "Ottieni per gruppo",
+  "getBySalespersonAndGroup": "Ottieni per venditore e gruppo"
 }
